Dark Theme v1.0.1 Fix
Fix GDPR appearing light when using MAL dark mode

--- a/Clarified Theme/Themes/Dark.css
+++ b/Clarified Theme/Themes/Dark.css
@@ -1,6 +1,6 @@
 /**
  * Dark Theme
- * v1.0.0
+ * v1.0.1
  */
 
 :root {
@@ -55,7 +55,7 @@
 	filter: brightness(100) invert(1);
 }
 
-#gdpr-modal-bottom {
+html:not(.dark-mode) #gdpr-modal-bottom {
 	filter: invert(0.9) hue-rotate(180deg);
 }
 
