--- a/Clarified Theme/Clarified.css
+++ b/Clarified Theme/Clarified.css
@@ -1,6 +1,6 @@
 /**
  * "Clarified" by Valerio Lyndon
- * v2.1.2
+ * v2.1.3
  * 
 ***TABLE*OF*CONTENTS***
  * 
@@ -2135,7 +2135,11 @@ body #fancybox-close::after {
 	color: var(--content-text);
 }
 
-.broadcast a:hover {
+#list-container~div .mal-modal-body {
+	background: none !important;
+}
+
+#list-container~div .broadcast a:hover {
 	background: var(--content-highlight) !important;
 }
 
