Clarified v2.1.4 Font Fix
Can't believe it took me until this long to realise I wasn't importing the header font so it probably looked fugly for everyone else........ well then. Reminder to always test your theme on another device to check.

--- a/Clarified Theme/Clarified.css
+++ b/Clarified Theme/Clarified.css
@@ -1,6 +1,6 @@
 /**
  * "Clarified" by Valerio Lyndon
- * v2.1.3
+ * v2.1.4
  * 
 ***TABLE*OF*CONTENTS***
  * 
@@ -62,7 +62,7 @@
   !IMPORTS
   =========*/
 
-@\import "https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap";
+@\import "https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&family=Roboto+Condensed:wght@700&display=swap";
 
 
 
